<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.SplashActivity">

    <ImageView
        android:id="@+id/ivSplashBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/splash_photo"
        android:scaleType="centerCrop"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4D000000"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.63"/>

    <TextView
        android:id="@+id/tvLive"
        style="@style/Custom_Title_Bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/lbl_live_your_perfacet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/gline"
        app:layout_constraintBottom_toBottomOf="@id/gline"
        />

    <TextView
        android:id="@+id/tvType"
        style="@style/Custom_Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lbl_type"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/tvLive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Start"
        app:cornerRadius="18dp"
        android:textSize="@dimen/text_regular_3x"
        android:paddingVertical="@dimen/margin_medium_x_18"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/margin_medium_x_16"/>

</androidx.constraintlayout.widget.ConstraintLayout>